index.html edit

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ And +google firebase push 연동
 <head>
     <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1" />
-    <title>Portfilio Prototype</title>
+    <title>Portfolio Prototype</title>
     <link rel="bluestar icon" href="img/monhun/favicon.ico">
     <!--font-->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Righteous&display=swap" >
