--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 <!DOCTYPE html >
 <html>
 <!--
@@ -48,7 +47,7 @@ And +google firebase push 연동
                 <div id="menubar_hamburger"> <span></span> <span></span> <span></span> <span></span> </div>
             </div>
             <div class="logo">
-                <h2>Portfilio Prototype</h2></div>
+                <h2>Portfolio Prototype</h2></div>
             <ul id="gnb">
                 <li>
                     <a href="#"> <span class="eng">menu1</span> <span class="kor">메뉴1</span> </a>
