--- a/index.html
+++ b/index.html
@@ -1,10 +1,5 @@
 <!DOCTYPE html >
 <html>
-<!--
-Comm PHP 게시판 연동
-And +google firebase push 연동
--->
-
 <head>
     <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1" />
@@ -409,7 +404,7 @@ And +google firebase push 연동
 <head>
     <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1" />
-    <title>Portfilio Prototype</title>
+    <title>Portfolio Prototype</title>
     <link rel="bluestar icon" href="img/monhun/favicon.ico">
     <!--font-->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Righteous&display=swap" >
@@ -448,7 +443,7 @@ And +google firebase push 연동
                 <div id="menubar_hamburger"> <span></span> <span></span> <span></span> <span></span> </div>
             </div>
             <div class="logo">
-                <h2>Portfilio Prototype</h2></div>
+                <h2>Portfolio Prototype</h2></div>
             <ul id="gnb">
                 <li>
                     <a href="#"> <span class="eng">menu1</span> <span class="kor">메뉴1</span> </a>
