--- a/index.html
+++ b/index.html
@@ -72,16 +72,16 @@
                     </ul>
                 </li>
                 <li>
-                    <a href="#"> <span class="eng">menu4</span> <span class="kor">메뉴4</span> </a>
+                    <a href="#"> <span class="eng">GALLERY</span> <span class="kor">회랑</span> </a>
                     <ul class="sub">
-                        <li><a href="#">sub1</a></li>
-                        <li><a href="#">sub2</a></li>
-                        <li><a href="#">sub3</a></li>
-                        <li><a href="#">sub4</a></li>
+                        <li><a href="#">Hunter Gallery</a></li>
+                        <li><a href="#">Monster Gallery</a></li>
+                        <li><a href="#">Weapon Gallery</a></li>
+                        <li><a href="#">Hall Of Fame</a></li>
                     </ul>
                 </li>
                 <li>
-                    <a href="#"> <span class="eng">menu5</span> <span class="kor">메뉴5</span> </a>
+                    <a href="#"> <span class="eng">BOARD</span> <span class="kor">게시판</span> </a>
                     <ul class="sub">
                         <li><a href="#">sub1</a></li>
                         <li><a href="#">sub2</a></li>
@@ -367,16 +367,14 @@
             </article>
         </div>
         <div id="con5">
-            <h1 class="content_header">Event Gallery</h1>
+            <h1 class="content_header">Hall Of Fame</h1>
         
         </div>
    
         <div id="con6">
-            <h1 class="content_header">Event Gallery</h1>
-            
+            <h1 class="content_header">
+Under construction</h1>
         </div>
-        <!--3d slider-->
-        <div id="con7"> </div>
     </section>
     <footer>
         <ul>
