--- a/index.html
+++ b/index.html
@@ -372,8 +372,7 @@
         </div>
    
         <div id="con6">
-            <h1 class="content_header">
-Under construction</h1>
+            <h1 class="content_header">Under construction</h1>
         </div>
     </section>
     <footer>
