--- a/gallery.html
+++ b/gallery.html
@@ -5,14 +5,16 @@
     <link rel="bluestar icon" href="img/monhun/favicon.ico">
     <!--font-->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Righteous&display=swap" >
-    <!--css-->
-    <link rel="stylesheet" href="css/diamonds.css" />
-    <link rel="stylesheet" href="css/style.css" />
+    <!--js-->
     <script data-brackets-id='7' src="https://kit.fontawesome.com/d1eaec8cd2.js"></script>
     <script type="text/javascript" src="js/jquery-2.1.1.min.js"></script>
     <script type="text/javascript" src="js/jquery.easing.1.3.js"></script>
     <script type="text/javascript" src="js/jquery.diamonds.js"></script>
     <script type="text/javascript" src="js/custom.js"></script>    
+    <script type="text/javascript" src="js/custom_sub.js"></script>    
+    <!--css-->
+    <link rel="stylesheet" href="css/diamonds.css" />
+    <link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
     <section id="content">
@@ -20,7 +22,7 @@
             <h1 class="content_header">Hunter Gallery</h1>
                <div class="container">
                 <!--Depth Of Field Card Hover Effect-->
-                    <div class="card" id="login">
+                    <div class="card">
                         <div class="hunters">
 <!--                            <h2>1</h2>-->
                             <div class="pic"> <img src="img/monhun/player/workaholic.png" alt=""></div>
