--- a/index.html
+++ b/index.html
@@ -7,21 +7,23 @@
     <link rel="bluestar icon" href="img/monhun/favicon.ico">
     <!--font-->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Righteous&display=swap" >
+
+    <!--    <link rel="stylesheet" href="css/test.css" />-->
+    <script data-brackets-id='7' src="https://kit.fontawesome.com/d1eaec8cd2.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.4.4/jquery.min.js"></script>
+    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <!--    <script type="text/javascript" src="js/barba.js"></script>-->
+    <script type="text/javascript" src="js/jquery-2.1.1.min.js"></script>
+    <script type="text/javascript" src="js/jquery.easing.1.3.js"></script>
+    <script type="text/javascript" src="js/swiper.min.js"></script>
+    <script type="text/javascript" src="js/index.js"></script>
+    
+    <!--외부 lib(git_hub) 사용시 index css를 제일 마지막에 사용-->
     <!--css-->
     <link rel="stylesheet" href="css/swiper.min.css" />
     <link rel="stylesheet" href="css/diamonds.css" />    
     <link rel="stylesheet" href="css/style.css" />
 <!--    <link rel="stylesheet" href="css/test.css" />-->
-    <script data-brackets-id='7' src="https://kit.fontawesome.com/d1eaec8cd2.js"></script>
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.4.4/jquery.min.js"></script>
-    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-<!--    <script type="text/javascript" src="js/barba.js"></script>-->
-    <script type="text/javascript" src="js/jquery-2.1.1.min.js"></script>
-    <script type="text/javascript" src="js/jquery.easing.1.3.js"></script>
-    <script type="text/javascript" src="js/swiper.min.js"></script>
-<!--    <script type="text/javascript" src="js/vr.js" data-minify="1"></script>-->
-    <script type="text/javascript" src="js/custom.js"></script>    
-    <!--외부 lib(git_hub) 사용시 index css를 제일 마지막에 사용-->
 </head>
 
 <body>
@@ -102,7 +104,7 @@
             <br>
             <h3>Monster Hunter</h3> </div> <img class="ss_w1_v" src="img/monhun/season/obj41.png"> <img class="ss_w2_v" src="img/monhun/season/obj42.png">
         <div class="countdown" id="countdown1">
-            <div class="icon_effect">
+            <div class="icon_effect" id="login">
                 <a class="ficon far fa-bell"></a>
             </div>
             <div class="timerBox"> <span class="timeel days">00</span> <span class="timeel timeRefDays">Day</span> <span class="timeel hours">00</span> <span class="timeel timeRefHours">Hour</span> <span class="timeel minutes">00</span> <span class="timeel timeRefMinutes">Min</span> <span class="timeel seconds">00</span> <span class="timeel timeRefSeconds">Sec</span> </div>
