--- a/main.html
+++ b/main.html
@@ -17,7 +17,7 @@
     <script type="text/javascript" src="js/custom.js"></script>    
 </head>
 <body>
-<section id="content">
+<section id="wrapper">
      <div id="template-front-page" class="barba-container" data-namespace="front-page">
         <div class="selection-wrapper">
             <div class="section-title-wrapper" id="iceb">
