--- a/gallery.html
+++ b/gallery.html
@@ -13,8 +13,9 @@
     <script type="text/javascript" src="js/custom.js"></script>    
     <script type="text/javascript" src="js/custom_sub.js"></script>    
     <!--css-->
-    <link rel="stylesheet" href="css/diamonds.css" />
     <link rel="stylesheet" href="css/style.css" />
+    <!--amp test fail-->
+    <!--<script async custom-element="amp-carousel" src="https://cdn.ampproject.org/v0/amp-carousel-0.1.js"></script>-->
 </head>
 <body>
     <section id="content">
@@ -73,9 +74,9 @@
         <div id="con3">
             <h1 class="content_header">Monster Gallery</h1>
             <div class="diamond-grid">
-                <div class="item"><img src="img/monhun/monster/1.jpg" alt=""></div>
-                <div class="item"><img src="img/monhun/monster/2.jpg" alt=""></div>
-                <div class="item"><img src="img/monhun/monster/3.jpg" alt=""></div>
+                <div class="item"><img src="img/monhun/monster/1.jpg" alt="맘타로트"></div>
+                <div class="item"><img src="img/monhun/monster/2.jpg" alt="디아 아종"></div>
+                <div class="item"><img src="img/monhun/monster/3.jpg" alt="쿠샬다오라"></div>
                 <div class="item"><img src="img/monhun/monster/4.jpg" alt=""></div>
                 <div class="item"><img src="img/monhun/monster/5.jpg" alt=""></div>
                 <div class="item"><img src="img/monhun/monster/6.jpg" alt=""></div>
