--- a/index.html
+++ b/index.html
@@ -13,12 +13,10 @@
     <script type="text/javascript" src="js/barba.js"></script>
     <script type="text/javascript" src="js/jquery-2.1.1.min.js"></script>
     <script type="text/javascript" src="js/jquery.easing.1.3.js"></script>
-    <script type="text/javascript" src="js/swiper.min.js"></script>
     <script type="text/javascript" src="js/index.js"></script>
     <script type="text/javascript" src="js/barba.js"></script>
     <!--외부 lib(git_hub) 사용시 index css를 제일 마지막에 사용-->
     <!--css-->
-    <link rel="stylesheet" href="css/diamonds.css" />    
     <link rel="stylesheet" href="css/style.css" />
 </head>
 
@@ -125,7 +123,7 @@
         </form>
         </div>
     </div>  
-            
+<section id="part">     
 <section id="wrapper">
     <div id="template-front-page" class="barba-container" data-namespace="front-page">
         <div class="selection-wrapper">
@@ -580,6 +578,7 @@
         </div>
     </div>
 </section>
+</section>
     <footer>
         <ul>
             <li><a href="#">Main</a></li>
@@ -602,7 +601,7 @@ $(".mnbtn").on("click", function() {
     dataType:'html',
     url:"./main.html",
     success:function(contents,textStatus){
-      $("#wrapper").html(contents);
+      $("#part").html(contents);
     },
     error:function (xhr,textStatus,errorThrown){
       return false;
@@ -615,7 +614,7 @@ $(".galbtn").on("click", function() {
     dataType:'html',
     url:"./gallery.html",
     success:function(contents,textStatus){
-      $("#wrapper").html(contents);
+      $("#part").html(contents);
     },
     error:function (xhr,textStatus,errorThrown){
       return false;
