custom.js bug fixed
comp

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <!--font-->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Righteous&display=swap" >
     <script data-brackets-id='7' src="https://kit.fontawesome.com/d1eaec8cd2.js"></script>
-    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script type="text/javascript" src="js/jquery-2.1.1.min.js"></script>
+    <!-- <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script> -->
+    <script type="text/javascript" src="https://code.jquery.com/jquery-3.4.1.js"></script>
     <script type="text/javascript" src="js/jquery.easing.1.3.js"></script>
     <!-- 외부 js lib -->
     <script type="text/javascript" src="js/barba.js"></script>
@@ -26,9 +26,16 @@
     <script type="text/javascript" src="js/scrolltoplugin.min.js"></script>
     <script type="text/javascript" src="js/TweenMax.min.js"></script>
     <script type="text/javascript" src="js/index.js"></script>
+
+    <!-- react start -->
+    <!-- <script src="http://fb.me/react-0.13.3.js"></script>
+    <script src="http://fb.me/JSXTransformer-0.13.3.js"></script> -->
+    <!-- react end -->
+
+
 </head>
 
-<body class="home page-template-default page page-id-2 page-accueil">
+<body class="home page-template-default">
     <!--opening part-->
 <!--
     <div class="open">
@@ -667,7 +674,7 @@
         </ul> <span>
 			Copyright ⓒ 2019 Deemo INT ALL Rights Reserved.
 		</span>
-        <a class="scroll-top" href="#" title="페이지 맨 위로" style=""></a>
+        <a class="scroll-top" href="#" title="페이지 맨 위로"></a>
     </footer>
 
 <!--page 전환 / 보완 및 정리 필요-->
