--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 <div id="menubar_hamburger"> <span></span> <span></span> <span></span> <span></span> </div>
             </div>
             <div class="logo">
-                <h2>Portfolio Prototype</h2></div>
+                <h2>Portfolio Prototype test</h2></div>
             <ul id="gnb">
                 <li>
                     <a href="#" class="mnbtn"> <span class="eng">MAIN</span> <span class="kor">본관</span> </a>
