--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1" />
-    <title>Portfolio Prototype</title>
+    <title>Portfolio Prototype Test</title>
     <link rel="bluestar icon" href="img/monhun/favicon.ico">
     <!--외부 lib(git_hub) 사용시 index css를 제일 마지막에 사용-->
     <!--css-->
